syntax = "proto3";

package userpb;

import "google/protobuf/empty.proto";

service UserService {
  rpc GetUser (GetUserRequest) returns (GetUserResponse) {}
  rpc CreateUser (CreateUserRequest) returns (google.protobuf.Empty) {}
  rpc GetUserDataById (GetUserByIdRequest) returns (GetUserByIdResponse) {}
  rpc UpdateUserData (UpdateUserRequest) returns (UpdateUserResponse) {}
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse) {}
}

message GetUserRequest {
  string username = 1;
}

message GetUserResponse {
  string UUID = 1;
}

message CreateUserRequest {
  string UUID = 1;
  string username = 2;
  string email = 3;
}

message GetUserByIdRequest {
  string UUID = 1;
}

message GetUserByIdResponse {
  string username = 1;
  string email = 2;
}


message UpdateUserRequest {
  string UUID = 1;
  optional string username = 2;
  optional string email = 3;
}

message UpdateUserResponse {
  string message = 1;
}
message GetAllUsersRequest {}

message GetAllUsersResponse {
  repeated User users = 1;
}

message User {
  string UUID = 1;
  string username = 2;
  string email = 3;
}